[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=3]
size = 40
outline_color = Color( 0.85098, 0.847059, 0.843137, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_color = Color( 0.952941, 0.313726, 0.160784, 1 )
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 359 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
anchor_left = 0.43
anchor_top = 0.478
anchor_right = 0.474
anchor_bottom = 0.544
margin_left = -5.40002
margin_top = -0.160004
margin_right = -5.72003
margin_bottom = 0.319977
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
anchor_left = 0.521
anchor_top = 0.479
anchor_right = 0.565
anchor_bottom = 0.546
margin_left = 3.12
margin_top = -0.880035
margin_right = 2.79999
margin_bottom = -1.12
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDownLabel" type="Label" parent="."]
anchor_left = 0.411
anchor_top = 0.308
anchor_right = 0.584
anchor_bottom = 0.375
margin_left = -0.0800171
margin_top = 0.239975
margin_right = -0.520081
margin_bottom = -3.05176e-05
custom_colors/font_color = Color( 0.952941, 0.313726, 0.160784, 1 )
custom_fonts/font = SubResource( 4 )
text = "Countdown"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 35, 360 )

[node name="WallTop" type="StaticBody2D" parent="."]
position = Vector2( 640, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 640, 730 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
shape = SubResource( 1 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 1245, 360 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 634, 370 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -10, 360 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 2 )

[node name="Rigth" type="Area2D" parent="."]
position = Vector2( 1290, 360 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigth"]
shape = SubResource( 2 )

[node name="CountDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Rigth" to="." method="_on_Rigth_body_entered"]
[connection signal="timeout" from="CountDownTimer" to="." method="_on_CountDownTImer_timeout"]
